--- a/templates/ocata/nova.conf
+++ b/templates/ocata/nova.conf
@@ -135,6 +135,11 @@ default_availability_zone = {{ default_availability_zone }}
 resume_guests_state_on_host_boot = {{ resume_guests_state_on_host_boot }}
 {% endif -%}
 
+{% if enable_sriov_nic_selection -%}
+monkey_patch=True
+monkey_patch_modules=nova_sriov_nics.nova_patch:nova_sriov_nics.nova_patch.dummy_decorator
+{% endif -%}
+
 {% if network_manager == 'neutron' and network_manager_config -%}
 [neutron]
 url = {{ network_manager_config.neutron_url }}
